add new path and schema
