# controller.py
@@ -17,20 +17,17 @@ def db_cursor():
     return mysql.connect(host=DB_HOST, user=DB_USER, passwd=DB_PASSWD, db=DB_NAME).cursor()
 
 
-def get_movies():
+def get_movie():
     with db_cursor() as cs:
         cs.execute("""
-            SELECT *
-            FROM Movies""")
-        result = [models.Movie(*row) for row in cs.fetchall()]
+            SELECT m.id, m.title, m.release_date, m.genre
+            FROM Movies m
+            """)
+        result = [models.MovieShort(*row) for row in cs.fetchall()]
     if result:
         return result
     else:
         abort(404)
-
-
-def get_movie_details(movie_title):
-    return
 
 def get_movie_details_id(movie_id):
     url = f"{base_url}/{movie_id}?api_key={themoviedb_key}"
@@ -44,3 +41,20 @@ def get_movie_details_id(movie_id):
         "production_companies": response.json().get('production_companies')
     }
     return r
+
+def get_movie_latest():
+    with db_cursor() as cs:
+        cs.execute("""
+            SELECT m.id, m.title, m.release_date, m.genre
+            FROM Movies m
+            ORDER BY m.release_date desc
+            LIMIT 30
+            """)
+        result = [
+            models.MovieShort(id, title, release_date, genre)
+            for id, title, release_date, genre in cs.fetchall()
+        ]
+        return result
+
+def get_movie_average_rating():
+    return
